syntax = "proto3";

package policy;
option go_package = "./pkg/proto/policypb";

// Servicio Policy
service PolicyService {
  rpc CheckPolicy(CheckRequest) returns (CheckResponse);
}

message CheckRequest {
  string username = 1;
  string action = 2;
}

message CheckResponse {
  bool allowed = 1;
  string reason = 2;
}
